Version 0.20.0
======================
- changed the behavior of `DebugLevel.ShowLog` to use `logOption=4` instead of `3` internally when executing GAMS

Version 0.19.4
======================
- updated external libraries
- added enforcement of TLS version 1.2 or greater

Version 0.19.3
======================
- added CMake option `USE-GCC` for example subproject to change library selection to prefer GCC over Clang

Version 0.19.2
======================
- fixed issue with zip when gams system dir contained spaces

Version 0.19.1
=======================
- reverted problematic change to cmake configuration

Version 0.19.0
========================
- added GAMSJob::runEngine to run jobs on GAMS Engine, rather than locally
    - added classes GAMSEngineConfiguration and GAMSEngineJob
- added transportEngine example to show usage of new Engine feature
- adjusted GAMSJob::run function signature for better c++ style

Version 0.18.0
========================
- fixed crash in findGamsOnUnix when LD_LIBRARY_PATH is empty

Version 0.17.1
========================
- fixed symlinks to gams not being resolved on macOS causing failing tests

Version 0.17.0
========================
- Migrated Jenkins pipeline to GitLab pipeline

Version 0.16.1
========================
- added documentation for GAMSSet::SetType

Version 0.16.0
========================
- added GAMSSet::SetType read property to distinguish multi and singleton sets
- added optional argument SetType in GAMSDatabase::addSet()

Version 0.15.1
========================
- updated examples/transport10, which now uses `transport.xlsx` instead of `transport.xls`

Version 0.15.0
========================
- removed conversion of mapped network drives to UNC paths
- fixed addition of GAMS to PATH not working on windows

Version 0.14.0
========================
- fixed unwanted overwrite of GAMSOption::setOutput during gams run

Version 0.13.1
========================
- improved user feedback for when GAMS was not found

Version 0.13.0